# ml_finance

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  broker_api.py  deprado_lib_afml.py  generic.py  heydt_mpf.py  jansen_lib_mlfat.py  license.txt  ml_finance.py  oanda_lite.py  project_1.py  pyproject.toml  readme.txt  requirements.txt  scalper.py
.github/workflows/: ci.yml
csvs/assets/: eurcsh.csv  spxcsh.csv
docs/: improvements.md  reading_recommendations.md
docs/improvements/: 01_immediate_safety.md  02_dependency_cleanup.md  03_broker_api_hardening.md  04_scalper_safety.md  05_repo_structure_docs.md  06_code_quality_ci.md  07_config_and_secrets.md  08_tests_and_validation.md  09_prioritized_action_plan.md  10_notes_and_rationale.md  11_add_ci_and_smoke_test.md  12_add_env_example_and_gitignore.md  13_add_precommit.md  14_package_management.md  task_template.md
exercise/: deprado_lib_afml.py  jansen_lib_mlfat.py
src/ml_finance/: __init__.py  broker_api.py  scalper.py  utils.py
tests/: conftest.py  test_broker_api.py  test_scalper.py  test_utils.py
